<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".viewcontroller.fragment.employe.EmployeRegister">

        <LinearLayout
            android:id="@+id/register_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="left"
                android:text="@string/detail_employee_register"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="left"
                android:text="@string/detail_employee_account"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tx_rg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:hintAnimationEnabled="false"
                app:startIconDrawable="@drawable/ic_mail"
                app:endIconMode="clear_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_rg_mail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shape_conner_round"
                    android:gravity="center|left"
                    android:hint="@string/hint_mail"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="left"
                android:text="@string/detail_employee_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                app:hintAnimationEnabled="false"
                android:layout_marginEnd="30dp"
                app:startIconDrawable="@drawable/ic_user"
                app:endIconMode="clear_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_rg_account"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shape_conner_round"
                    android:gravity="center|left"
                    android:hint="@string/hint_account"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="left"
                android:text="@string/detail_employee_password"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tx_rg_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:startIconDrawable="@drawable/ic_key"
                app:hintAnimationEnabled="false"
                app:endIconDrawable="@drawable/ic_password_eye"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_rg_pass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shape_conner_round"
                    android:hint="@string/hint_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:selectAllOnFocus="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="left"
                android:text="@string/detail_employee_position"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/shape_conner_round"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_position"
                    android:paddingStart="5dp"
                    app:tint="@color/black" />

                <Spinner
                    android:id="@+id/spinner_employee_regist"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:gravity="center|left"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/b_rg_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:background="@color/purple_500"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>


    </FrameLayout>
</androidx.core.widget.NestedScrollView>
