<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fm_forgot_pass"
        tools:context=".viewcontroller.fragment.forgotpassword.ForgotPass">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/send_mail" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/name_forgot_password"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="60dp"
                android:gravity="center"
                android:text="@string/detail_forgot_password"
                android:textColor="@color/gray"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/ed_mail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="80dp"
                android:background="@null"
                android:hint="@string/hint_forgot_pass"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="70dp"
                android:background="@color/gray"/>
            <Button
                android:id="@+id/b_send_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@color/purple_500"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"/>



        </LinearLayout>

    </FrameLayout>
</androidx.core.widget.NestedScrollView>